[project]
name = "iot-protocol-lab"
version = "0.1.0"
description = "MQTT IoT protocol analysis and implementation coursework project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "amqtt>=0.11.0",
    "fastapi>=0.115.0",
    "paho-mqtt>=2.1.0",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
iot-mqtt-broker = "iot_protocol_lab.mqtt_broker:main"
iot-mqtt-simulator = "iot_protocol_lab.mqtt_simulator:main"
iot-dashboard = "iot_protocol_lab.dashboard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
